# zalgo.rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  README.md.skt.md  build.rs
examples/: all_chars.rs  apply.rs  chars.rs  gen.rs  is_zalgo.rs
src/: all_chars.rs  apply_rng_iter.rs  lib.rs  unapply_iter.rs
tests/: lib.rs  skeptic.rs  version_numbers.rs
