[package]
authors = ["Zeyla Hellyer <zeylahellyer@gmail.com>"]
description = "A crate for generating Zalgo text with defined parameters."
documentation = "http://docs.rs/zalgo"
homepage = "https://github.com/zeyla/zalgo.rs"
keywords = ["zalgo", "no_std"]
license = "ISC"
name = "zalgo"
readme = "README.md"
repository = "https://github.com/zeyla/zalgo.rs.git"
version = "0.2.0"


[dependencies]
bitflags = "^1.0"
colored = { version = "^1.6", optional = true }
rand = { version = "^0.4", default-features = false }
structopt = { version = "^0.2", optional = true }

[build-dependencies]
rustc_version = "^0.2"

[dev-dependencies]
lipsum = "^0.4"


[features]
default = ["std"]
std = ["rand/std"]
alloc = []
nightly = []

build-binary = ["std", "colored", "structopt"]


[[bin]]
name = "zalgo"
doc = false
required-features = ["build-binary"]

[[example]]
name = "apply"
required-features = ["std"]
