[package]
authors = ["Zeyla Hellyer <zeylahellyer@gmail.com>"]
description = "A crate for generating Zalgo text with defined parameters."
documentation = "http://docs.rs/zalgo"
homepage = "https://github.com/zeyla/zalgo.rs"
keywords = ["zalgo", "no_std"]
license = "ISC"
name = "zalgo"
readme = "README.md"
repository = "https://github.com/zeyla/zalgo.rs.git"
version = "0.2.0"


[dependencies]
bitflags = "^1.0"
colored = { version = "^1.6", optional = true }
rand = { version = "^0.4", default-features = false }
# `skeptic` is in [dependencies] and not [dev-dependencies] because
# dev-dependencies are not allowed to be optional
skeptic = { version = "^0.13", optional = true }
structopt = { version = "^0.2", optional = true }
# `version-sync` is in [dependencies] and not [dev-dependencies] because
# dev-dependencies are not allowed to be optional
version-sync = { version = "^0.5", optional = true }

[build-dependencies]
rustc_version = "^0.2"
skeptic = { version = "^0.13", optional = true }

[dev-dependencies]
lipsum = "^0.4"


[features]
# Features that affect the library itself
default = ["std"]
std = ["rand/std"]
alloc = []
nightly = []

# Features that affect tools around the library
build-binary = ["std", "colored", "structopt"]
test-readme = ["skeptic", "version-sync"]


[[bin]]
name = "zalgo"
doc = false
required-features = ["build-binary"]

[[example]]
name = "apply"
required-features = ["std"]
